Change text in alternative Food Finder

--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -100,20 +100,6 @@
     background-color: #87b822;
   }
 }
-	/* Responsive embed CSS for Google Maps */
-/*    .google-maps {
-        position: relative;
-        padding-bottom: 75%; // This is the aspect ratio
-        height: 0;
-        overflow: hidden;
-    }
-    .google-maps iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100% !important;
-        height: 100% !important;
-    }*/
 
 	/* Responsive embed CSS for Google Maps */
 	#mapContainer {
@@ -189,48 +175,6 @@
 		</div> -->
 
 		<div id="mapContainer"></div>
-
-
-		<!-- PANEL -->
-
-<!--  			<div class="panel-body">
- 				<h3 >Nearby: Earl's Place Market<br/><br/></h3>
-
-    		Gluten Free Items: Glutino, Abcd, Efgh
-    		<br/>
-    		Vegan Items: Viana, Abcd, Efgh
-    		<br/>
-    		Vegatarian Items: Example, Abcd, Efgh
-    		
-    		<br/><br/>
-			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 121 </button>
-  			</div>
-
-  			<div class="panel-body">
- 				<h3 >1.1 miles away: Goody's Market<br/><br/></h3>
-
-    		Gluten Free Items: Applegate, Earthbound Farm, Etc
-    		<br/>
-    		Vegan Items: The Vegg, Abcd, Efgh
-    		<br/>
-    		Vegatarian Items: Lightlife, Nate's, Etc
-    		
-    		<br/><br/>
-			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 36 </button>
-  			</div>
-
-  			<div class="panel-body">
- 				<h3 >1.3 miles away: Roots<br/><br/></h3>
-
-    		Gluten Free Menu: Pacific Crest, Chop-Chop River
-    		<br/>
-    		Vegan Menu: Hetch Hetchy, The Root Berger, Tuolomme Meadows
-    		<br/>
-    		Vegatarian Menu: Sweet Potato Fries, Fern Creek Smoothies
-    		
-    		<br/><br/>
-			<button type="button" id="upvote" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 45 </button>
-  			</div> -->
 		
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
         <div class="panel-body">
@@ -282,13 +226,13 @@
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
   			<div class="panel-body">
-  				<h3><a href="goodys">Goody's Place and Market</a></h3>
+  				<h3><a href="goodys">Goody's</a></h3>
   			</div>
   		</div>
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
   			<div class="panel-body">
-  				<h3><a href="ovt">Oceanview Terrace</a></h3>
+  				<h3><a href="ovt">OVT</a></h3>
   			</div>
   		</div>
 
