--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -29,16 +29,25 @@
 	h4 {
 		clear:both;
 	}
-	.panel-body {
+/*	.panel-body {
 		background-color: #f8faef;
-    margin:0px;
-	}
+	}*/
 	
 	.navbar-brand {
 		font-family: "Pacifico", serif;
 		font-size: 22pt;
 		text-shadow: 2px 2px 3px #17A57D;
 	}
+
+  .container {
+    padding:0px;
+  }
+
+  .panel-body {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  
 	
 .navbar-default {
   background-color: #87b822;
@@ -135,7 +144,6 @@
 
   	<!-- NAVBAR -->
 	<div class="navbar navbar-default navbar-fixed-top">
-		<div class="container">
 			<div class="navbar-header"> 
 				<a href="index" class="navbar-brand">nuTriton </a> 
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -145,7 +153,6 @@
 					<span class="icon-bar"></span>
 				</button>
 			</div>
-
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li> <a href="index" > Home </a></li>
@@ -157,14 +164,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="container"></div>
-		</br>
-		</br>
-		</br>
-		</br>
-	</div>
 
-	<div class="container">
+		</br>
+		</br>
+		</br>
+		</br>
+
 		<!-- 
 		<div class="google-maps">
 
@@ -241,7 +246,6 @@
   				<h3><a href="sixtyfourdegrees">64 Degrees</a></h3>
   			</div>
   		</div>
-	</div>
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
