Improve Food Finder design

--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -46,8 +46,17 @@
   .panel-body {
     padding-left: 0px;
     padding-right: 0px;
+    padding-top: 3px;
   }
   
+  .panel-default {
+    margin-top:5px;
+    margin-bottom:2px;
+  }
+
+  a {
+    color: #648a19;
+  }
 	
 .navbar-default {
   background-color: #87b822;
@@ -168,7 +177,6 @@
 		</br>
 		</br>
 		</br>
-		</br>
 
 		<!-- 
 		<div class="google-maps">
@@ -178,8 +186,10 @@
 		<iframe src="https://www.google.com/maps/embed/v1/search?key=AIzaSyCAoXsjsTgbqzLrJUTVX5UQntWrX6tnzNM&q=markets+ucsd"> </iframe>
 
 		</div> -->
+    <div class="container">
 
 		<div id="mapContainer"></div>
+    <br/>
 		
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
         <div class="panel-body">
@@ -246,7 +256,7 @@
   				<h3><a href="sixtyfourdegrees">64 Degrees</a></h3>
   			</div>
   		</div>
-
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
