Add Woopra tracking to Food Finder A/B versions

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -7,37 +7,38 @@
     <title>nuTriton</title>
     <link rel="shortcut icon" href="images/leaf.ico">
     <!-- Font -->
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<!-- Lightbox -->
-	<link href="css/lightbox.css" rel="stylesheet" />
+  	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
+  	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
+      <!-- Bootstrap -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  	<!-- Lightbox -->
+  	<link href="css/lightbox.css" rel="stylesheet" />
     
+    {{> tracking_code_script}}
+
     <style>
+  	body {
+  		background-color: #e9f1d0;
+  		font-family: 'Source Sans Pro', sans-serif;
+  		font-size: 160%;
+  	}
 
-	body {
-		background-color: #e9f1d0;
-		font-family: 'Source Sans Pro', sans-serif;
-		font-size: 160%;
-	}
-
-	h3 {
-		margin: 0px;
-		padding:10px 0px 0px 0px;
-	}
-	h4 {
-		clear:both;
-	}
-	.panel-body {
-		background-color: #f8faef;
-	}
-	
-	.navbar-brand {
-		font-family: "Pacifico", serif;
-		font-size: 22pt;
-		text-shadow: 2px 2px 3px #17A57D;
-	}
+  	h3 {
+  		margin: 0px;
+  		padding:10px 0px 0px 0px;
+  	}
+  	h4 {
+  		clear:both;
+  	}
+  	.panel-body {
+  		background-color: #f8faef;
+  	}
+  	
+  	.navbar-brand {
+  		font-family: "Pacifico", serif;
+  		font-size: 22pt;
+  		text-shadow: 2px 2px 3px #17A57D;
+  	}
 
 	
 .navbar-default {
@@ -234,67 +235,67 @@
 		
     <div class="panel panel-default ">
         <div class="panel-body">
-          <h3><a href="market">All Markets</a></h3>
+          <h3><a href="market" class="version_a">All Markets</a></h3>
         </div>
     </div>
 
 		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="canyonvista">Canyon Vista </a></h3>
+  				<h3><a href="canyonvista" class="version_a">Canyon Vista </a></h3>
   			</div>
 		</div>
 
 		<div class="panel panel-default ">
 			<div class="panel-body">
-  				<h3><a href="pines">Pines</a></h3>
+  				<h3><a href="pines" class="version_a">Pines</a></h3>
   			</div>
   		</div>
 
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="roots">Roots</a></h3>
+  				<h3><a href="roots" class="version_a">Roots</a></h3>
   			</div>
   		</div>
 
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="bistro">The Bistro</a></h3>
+  				<h3><a href="bistro" class="version_a">The Bistro</a></h3>
   			</div>
   		</div>
 
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="cafev">Cafe Ventanas</a></h3>
+  				<h3><a href="cafev" class="version_a">Cafe Ventanas</a></h3>
   			</div>
   		</div>
 
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="clubmed">Club Med</a></h3>
+  				<h3><a href="clubmed" class="version_a">Club Med</a></h3>
   			</div>
   		</div>
 
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="foodworx">Foodworx</a></h3>
+  				<h3><a href="foodworx" class="version_a">Foodworx</a></h3>
   			</div>
   		</div>
 
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="goodys">Goody's Place and Market</a></h3>
+  				<h3><a href="goodys" class="version_a">Goody's Place and Market</a></h3>
   			</div>
   		</div>
 
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="ovt">Oceanview Terrace</a></h3>
+  				<h3><a href="ovt" class="version_a">Oceanview Terrace</a></h3>
   			</div>
   		</div>
 
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="sixtyfourdegrees">64 Degrees</a></h3>
+  				<h3><a href="sixtyfourdegrees" class="version_a">64 Degrees</a></h3>
   			</div>
   		</div>
 	</div>
