--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -157,7 +157,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
         <div class="navbar-header"> 
-				  <a href="index" class="navbar-brand">nuTriton </a> 
+				  <a href="foodfinder" class="navbar-brand">nuTriton </a> 
 				  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				  	<span class="sr-only">Toggle navigation</span>
 				  	<span class="icon-bar"></span>
@@ -167,8 +167,8 @@
 			  </div>
 			  <div class="collapse navbar-collapse">
 				  <ul class="nav navbar-nav navbar-right">
-					 <li> <a href="index" > Home </a></li>
-					 <li class="active"> <a href="foodfinder" > Food Finder </a></li>
+           <li class="active"> <a href="foodfinder" > Food Finder </a></li>
+					 <li> <a href="index" > Feed </a></li>
 					 <li> <a href="profile" >Profile </a></li>
 					 <li> <a href="help"> Help </a></li>
 					 <li> <a href="/" > Log Out </a></li>
