--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -127,8 +127,8 @@
 
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li > <a href="index" > Home </a></li>
           <li > <a href="foodfinder" > Food Finder </a></li>
+          <li > <a href="index" > Feed </a></li>
           <li > <a href="profile"> Profile </a></li>
           <li class="active"> <a href="help" > Help </a></li>
           <li> <a href="/" > Log Out </a></li>
