--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -117,7 +117,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
-				<a href="index" class="navbar-brand">nuTriton </a> 
+				<a href="foodfinder" class="navbar-brand">nuTriton </a> 
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -128,8 +128,8 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li > <a href="index" > Home </a></li>
 					<li > <a href="foodfinder" > Food Finder </a></li>
+					<li > <a href="index" > Feed </a></li>
 					<li class="active"> <a href="profile" >Profile </a></li>
 					<li > <a href="help"> Help </a></li>
 					<li> <a href="/" > Log Out </a></li>
