--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -9,6 +9,7 @@
     <!-- Font -->
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<!-- Lightbox -->
@@ -17,12 +18,12 @@
     <style>
 
 	h1 {
-		text-shadow: 2px 2px 0px white; /*the shadows return!!!*/
+		text-shadow: 1px 1px 0px white; /*the shadows return!!!*/
 	}
 
 	body {
 		background: url("images/background-5.jpg") no-repeat center center fixed; 
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Josefin Sans', sans-serif;
 		font-size: 160%;
 	}
 
@@ -48,6 +49,11 @@
 
 	.login-collapse {
 		color: #eff2df;
+	}
+
+	.form-control {
+		font-size: 0.9em;
+		padding-bottom: 1px;
 	}
 
 
@@ -132,7 +138,7 @@
 					<li> <a href="foodfinder" > Log In </a></li>
 				</ul>
 				<form class="navbar-form navbar-right" role="search">
-        			<div class="form-group">
+        			<div class="form-group login">
         			    <input type="text" class="form-control" placeholder="Username">
           				<input type="password" class="form-control" placeholder="Password">
         			</div>
@@ -159,17 +165,21 @@
 	<div class="container">
 		<div class="panel panel-default ">
 			<div class="panel-body">
-				<form >
+				<form>
 				    <div class="form-group">
-				    	<h3>Register</h3>
+				    	<h3>Sign Up</h3>
 				    	<br/>
-				      	<label for="name">Name</label>
+				    	Name
+				      	<!-- <label for="name">Name</label> -->
 				      	<input type="text" class="form-control" id="title" name="name">
-				      	<label for="email">Email</label>
+				      	Email
+				      	<!-- <label for="email">Email</label> -->
 				     	<input type="text" class="form-control" id="content" name="email">
-				     	<label for="password">Password</label>
+				     	Password
+				     	<!-- <label for="password">Password</label> -->
 				     	<input type="password" class="form-control" id="content" name="password">
-				     	<label for="passwordconfirm">Confirm Password</label>
+				     	Confirm Password
+				     	<!-- <label for="passwordconfirm">Confirm Password</label> -->
 				     	<input type="password" class="form-control" id="content" name="passwordconfirm">
 				    </div>
 				    <input type="submit" id="submitBtn" class="btn btn-default" value="Register"></input>
