Added tracking script to all files and track votes

--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
-    
+      {{> tracking_code_script}}
+  
     <style>
 
 	body {
