Add back button tracking

--- a/views/pines.handlebars
+++ b/views/pines.handlebars
@@ -111,7 +111,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<ul class="nav navbar-nav">
-				<li> <a href="foodfinder" ><span class="glyphicon glyphicon-chevron-left"></span>Back </a></li>
+				<li> <a href="foodfinder" class="back"><span class="glyphicon glyphicon-chevron-left"></span>Back </a></li>
 			</ul>
 		</div>
 	</div>
@@ -156,8 +156,6 @@
 
 	</div>
 
-	<!-- Include Google Maps API -->
-	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
