--- a/views/cafev.handlebars
+++ b/views/cafev.handlebars
@@ -111,7 +111,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<ul class="nav navbar-nav">
-				<li> <a href="foodfinder" ><span class="glyphicon glyphicon-chevron-left"></span>Back </a></li>
+				<li> <a href="foodfinder" class="back"><span class="glyphicon glyphicon-chevron-left"></span>Back </a></li>
 			</ul>
 		</div>
 	</div>
