--- a/views/ovt.handlebars
+++ b/views/ovt.handlebars
@@ -111,7 +111,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<ul class="nav navbar-nav">
-			<li><a href="foodfinder" ><span class="glyphicon glyphicon-chevron-left"></span>Back </a></li>
+			<li><a href="foodfinder" class="back"><span class="glyphicon glyphicon-chevron-left"></span>Back </a></li>
 			</ul>
 		</div>
 	</div>
@@ -157,8 +157,6 @@
 
 	</div>
 
-	<!-- Include Google Maps API -->
-	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -169,7 +167,5 @@
 	<script src="js/lightbox.min.js"></script>
 	<script src="js/nutriton.js"></script>
 
-
-	
   </body>
 </html>
