--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -10,6 +10,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Lato|Open+Sans:400,600' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic|Open+Sans:400italic,600italic,700italic,700,600,400|Roboto:400,300italic,300,400italic,500,500italic,700,700italic|Raleway:400,300,500,600,700|Pacifico' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<!-- Lightbox -->
@@ -24,7 +25,7 @@
 
 	body {
 		background: url("images/background-5.jpg") no-repeat center center fixed; 
-		font-family: 'Josefin Sans', sans-serif;
+		font-family: 'Montserrat', sans-serif;
 		font-size: 160%;
 	}
 
@@ -51,12 +52,6 @@
 	.login-collapse {
 		color: #eff2df;
 	}
-
-	.form-control {
-		font-size: 0.9em;
-		padding-bottom: 1px;
-	}
-
 
 .navbar-default {
 	background-color: #87b822;
