Add tracking to dining/market locations and navbar buttons

--- a/views/clubmed.handlebars
+++ b/views/clubmed.handlebars
@@ -152,7 +152,7 @@
 					    <label for="type">Type:</label>
 					     	<input type="text" class="form-control" id="type" placeholder="e.g. Gluten-free" name="type">
 					    </div>
-					    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
+					    <input type="submit" id="submitBtn" class="btn btn-default addMenuButton" value="Post"></input>
 					</form>
   			</div>
 		</div>
