--- a/views/sixtyfourdegrees.handlebars
+++ b/views/sixtyfourdegrees.handlebars
@@ -152,7 +152,7 @@
 					    <label for="type">Type:</label>
 					     	<input type="text" class="form-control" id="type" placeholder="e.g. Gluten-free" name="type">
 					    </div>
-					    <input type="submit" id="submitBtn" class="btn btn-default" value="Post"></input>
+					    <input type="submit" id="submitBtn" class="btn btn-default addMenuButton" value="Post"></input>
 					</form>
   			</div>
 		</div>
@@ -170,7 +170,6 @@
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
 	<script src="js/nutriton.js"></script>
-
 
 	
   </body>
