--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -152,7 +152,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
-				<a href="foodfinder" class="navbar-brand">nuTriton </a> 
+				<a href="foodfinder" class="navbar-brand nutriton_click">nuTriton </a> 
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -163,11 +163,11 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-          <li class="active"> <a href="foodfinder" > Food Finder </a></li>
-					<li> <a href="index" > Feed </a></li>
-					<li> <a href="profile" >Profile </a></li>
+          <li class="active"> <a href="foodfinder foodfinder_click" > Food Finder </a></li>
+					<li> <a href="index" class="feed_click"> Feed </a></li>
+					<li> <a href="profile" class="profile_click">Profile </a></li>
 					<li> <a href="help"> Help </a></li>
-					<li> <a href="/" > Log Out </a></li>
+					<li> <a href="/" class="logout_click"> Log Out </a></li>
 				</ul>
 			</div>
 		</div>
