--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -163,11 +163,11 @@
 			  </div>
 			  <div class="collapse navbar-collapse">
 				  <ul class="nav navbar-nav navbar-right">
-           <li class="active"> <a href="foodfinder" > Food Finder </a></li>
-					 <li> <a href="index" > Feed </a></li>
-					 <li> <a href="profile" >Profile </a></li>
-					 <li> <a href="help"> Help </a></li>
-					 <li> <a href="/" > Log Out </a></li>
+            <li class="active"> <a href="foodfinder foodfinder_click" > Food Finder </a></li>
+            <li> <a href="index" class="feed_click"> Feed </a></li>
+            <li> <a href="profile" class="profile_click">Profile </a></li>
+            <li> <a href="help"> Help </a></li>
+            <li> <a href="/" class="logout_click"> Log Out </a></li>
 				  </ul>
 			 </div>
       </div>
