--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
-        {{> tracking_code_script}}
+    
+    {{> tracking_code_script}}
 
     <style>
 
@@ -119,11 +120,11 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li > <a href="foodfinder" > Food Finder </a></li>
-					<li class="active"> <a href="index" > Feed </a></li>
-					<li> <a href="profile" >Profile </a></li>
+					<li > <a href="foodfinder" class="foodfinder_click"> Food Finder </a></li>
+					<li class="active"> <a href="index" class="feed_click"> Feed </a></li>
+					<li> <a href="profile" class="profile_click">Profile </a></li>
 					<li> <a href="help"> Help </a></li>
-					<li> <a href="/" > Log Out </a></li>
+					<li> <a href="/" class="logout_click"> Log Out </a></li>
 				</ul>
 			</div>
 		</div>
