--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -131,7 +131,7 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li> <a href="foodfinder" > Log In </a></li>
+					<li> <a href="foodfinder" class="login_click"> Log In </a></li>
 				</ul>
 				<form class="navbar-form navbar-right" role="search">
         			<div class="form-group login">
