Add gritter help messages

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -180,6 +180,9 @@
 	</div>
 
 	<div class="container">
+  <button type="button" class="btn btn-default pull-right"><a href="#" class="foodfinderpage" id="add-without-image">Help</a></button>
+  </br>
+  </br>
 		<!-- 
 		<div class="google-maps">
 
