--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -173,13 +173,15 @@
       </div>
 		</div>
 	</div>
-
-	</br>
-	</br>
-	</br>
+  
+  
   
   <div class="container">
-		<div id="mapContainer"></div>
+		<button type="button" class="btn btn-default pull-right"><a href="#" class="foodfinderpage" id="add-without-image">Help</a></button>
+        <br/>
+        <br/>
+  </br>
+  <div id="mapContainer"></div>
     <br/>
 		
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
