--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -137,6 +137,7 @@
 
 	<div class="container">
         <button type="button" class="btn btn-default pull-right"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
+        <button type="button" class="btn btn-default pull-right"><a href="#" class="indexpage" id="add-without-image">Help</a></button>
         <br/>
         <br/>
 
