--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -139,7 +139,7 @@
 		</div>
 	</div>
 	<div class="container"></div>
-		</br>
+		<button type="button" class="btn btn-default pull-right"><a href="#" class="profilepage" id="add-without-image">Help</a></button>
 		</br>
 		</br>
 		</br>
