--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -163,7 +163,7 @@
 			  </div>
 			  <div class="collapse navbar-collapse">
 				  <ul class="nav navbar-nav navbar-right">
-            <li class="active"> <a href="foodfinder foodfinder_click" > Food Finder </a></li>
+            <li class="active"> <a href="foodfinder" class="foodfinder_click" > Food Finder </a></li>
             <li> <a href="index" class="feed_click"> Feed </a></li>
             <li> <a href="profile" class="profile_click">Profile </a></li>
             <li> <a href="help"> Help </a></li>
