--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -129,7 +129,7 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li > <a href="foodfinder foodfinder_click" > Food Finder </a></li>
+					<li > <a href="foodfinder" class="foodfinder_click" > Food Finder </a></li>
 					<li > <a href="index" class="feed_click"> Feed </a></li>
 					<li class="active"> <a href="profile" class="profile_click">Profile </a></li>
 					<li > <a href="help"> Help </a></li>
