Added gritter css

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -12,7 +12,9 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
       <!-- Bootstrap -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  	<!-- Lightbox -->
+  	 <!-- Gritter -->
+  <link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
+    <!-- Lightbox -->
   	<link href="css/lightbox.css" rel="stylesheet" />
     
     {{> tracking_code_script}}
@@ -179,7 +181,7 @@
 	</div>
 
 	<div class="container">
-  <button type="button" class="btn btn-default pull-right"><a href="#" class="foodfinderpage" id="add-without-image">Help</a></button>
+  <button type="button" class="btn btn-default pull-right"><a href="#" class="foodfinderpage" id="add-without-image">?</a></button>
   </br>
   </br>
 		<!-- 
