--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,6 +12,8 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<!-- Gritter -->
+	<link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
         {{> tracking_code_script}}
@@ -138,7 +140,7 @@
 		</div>
 	</div>
 	<div class="container"></div>
-		<button type="button" class="btn btn-default pull-right"><a href="#" class="profilepage" id="add-without-image">Help</a></button>
+		<button type="button" class="btn btn-default pull-right"><a href="#" class="profilepage" id="add-without-image">?</a></button>
 		</br>
 		</br>
 		</br>
