--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,6 +12,8 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<!-- Gritter -->
+	<link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
     
@@ -136,7 +138,7 @@
 
 	<div class="container">
         <button type="button" class="btn btn-default pull-right"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
-        <button type="button" class="btn btn-default pull-right"><a href="#" class="indexpage" id="add-without-image">Help</a></button>
+        <button type="button" class="btn btn-default pull-right"><a href="#" class="indexpage" id="add-without-image">?</a></button>
         <br/>
         <br/>
 
