Added gritter js

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<!-- Gritter -->
 	<link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
+	<script type="text/javascript" src="js/jquery.gritter.js"></script>
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
         {{> tracking_code_script}}
