Fix import jquery

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -13,6 +13,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<!-- Gritter -->
+		<script src="js/jquery-1.11.0.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
 	<script type="text/javascript" src="js/jquery.gritter.js"></script>
 	<!-- Lightbox -->
@@ -142,7 +143,7 @@
 	</div>
 	<div class="container">
 		</br></br></br>
-		<button type="button" class="btn btn-default pull-right"><a href="#" class="profilepage" id="add-without-image">?</a></button>
+		<button type="button" class="btn btn-default pull-right"><a href="#" class="profilepage" id="add-profile">?</a></button>
 		
 		<br/><br/>
 		<div class="jumbotron">
@@ -258,7 +259,6 @@
     <script src="js/bootstrap.min.js"></script>
 	
 	<!-- The following two js are Lightbox jquery scripts -->
-	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/lightbox.min.js"></script>
 	<script src="js/nutriton.js"></script>
 	
