Add alternative profile page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -139,11 +139,10 @@
 	</div>
 
 	<div class="container">
+        <br/>
         <button type="button" class="btn btn-default pull-right"><a href="#" class="indexpage" id="add-without-image">?</a></button>
-        <button type="button" class="btn btn-default pull-right"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
-        <br/>
-        <br/>
-
+        <button type="button" class="btn btn-default pull-left"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
+        <br/><br/>
 		<div class="panel panel-default ">
 			<div class="panel-body">
  				<div class="post">				
