Make boxes in Food Finder clickable

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -184,71 +184,93 @@
 
 	<div id="mapContainer"></div>
     
+    <a href="market" class="version_a">  
     <div class="panel panel-default ">
         <div class="panel-body">
-          <h3><a href="market" class="version_a">All Markets</a></h3>
+          <h3>All Markets</h3>
         </div>
     </div>
-
+    </a>
+    
+    <a href="canyonvista" class="version_a">
 		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="canyonvista" class="version_a">Canyon Vista </a></h3>
+  				<h3>Canyon Vista </h3>
   			</div>
 		</div>
+    </a>
 
+    <a href="pines" class="version_a">
 		<div class="panel panel-default ">
 			<div class="panel-body">
-  				<h3><a href="pines" class="version_a">Pines</a></h3>
+  				<h3>Pines</h3>
   			</div>
   		</div>
+    </a>
 
+    <a href="roots" class="version_a">
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="roots" class="version_a">Roots</a></h3>
+  				<h3>Roots</h3>
   			</div>
   		</div>
+    </a>
 
+    <a href="bistro" class="version_a">
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="bistro" class="version_a">The Bistro</a></h3>
+  				<h3>The Bistro</h3>
   			</div>
   		</div>
+    </a>
 
+    <a href="cafev" class="version_a">
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="cafev" class="version_a">Cafe Ventanas</a></h3>
+  				<h3>Cafe Ventanas</h3>
   			</div>
   		</div>
+    </a>
 
+    <a href="clubmed" class="version_a">
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="clubmed" class="version_a">Club Med</a></h3>
+  				<h3>Club Med</h3>
   			</div>
   		</div>
+      </a>
 
+    <a href="foodworx" class="version_a">
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="foodworx" class="version_a">Foodworx</a></h3>
+  				<h3>Foodworx</h3>
   			</div>
   		</div>
-
+    </a>
+    
+    <a href="goodys" class="version_a">
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="goodys" class="version_a">Goody's Place and Market</a></h3>
+  				<h3>Goody's Place and Market</h3>
   			</div>
   		</div>
+    </a>
 
+    <a href="ovt" class="version_a">
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="ovt" class="version_a">Oceanview Terrace</a></h3>
+  				<h3>Oceanview Terrace</h3>
   			</div>
   		</div>
+    </a>
 
+    <a href="sixtyfourdegrees" class="version_a">
   		<div class="panel panel-default ">
   			<div class="panel-body">
-  				<h3><a href="sixtyfourdegrees" class="version_a">64 Degrees</a></h3>
+  				<h3>64 Degrees</h3>
   			</div>
   		</div>
+    </a>  
 	</div>
 
 
