--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -12,10 +12,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
       <!-- Bootstrap -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  	 <!-- Gritter -->
-  <link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
-  <script type="text/javascript" src="js/jquery.gritter.js"></script>
-    <!-- Lightbox -->
+  	 <!-- Lightbox -->
   	<link href="css/lightbox.css" rel="stylesheet" />
     
     {{> tracking_code_script}}
@@ -182,7 +179,7 @@
 	</div>
 
 	<div class="container">
-  <button type="button" class="btn btn-default pull-right"><a href="#" class="foodfinderpage" id="add-without-image">?</a></button>
+  <button type="button" class="btn btn-default pull-right"><a href="#" id="">?</a></button>
   </br>
   </br>
 		<!-- 
