--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,9 +12,6 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<!-- Gritter -->
-	<link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
-	<script type="text/javascript" src="js/jquery.gritter.js"></script>
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
     
@@ -139,7 +136,7 @@
 
 	<div class="container">
         <button type="button" class="btn btn-default pull-right"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
-        <button type="button" class="btn btn-default pull-right"><a href="#" class="indexpage" id="add-without-image">?</a></button>
+        <button type="button" class="btn btn-default pull-right"><a href="#" id="">?</a></button>
         <br/>
         <br/>
 
