--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,9 +12,6 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<!-- Gritter -->
-	<link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
-	<script type="text/javascript" src="js/jquery.gritter.js"></script>
 	<!-- Lightbox -->
 	<link href="css/lightbox.css" rel="stylesheet" />
         {{> tracking_code_script}}
@@ -141,7 +138,7 @@
 		</div>
 	</div>
 	<div class="container"></div>
-		<button type="button" class="btn btn-default pull-right"><a href="#" class="profilepage" id="add-without-image">?</a></button>
+		<button type="button" class="btn btn-default pull-right"><a href="#" id="">?</a></button>
 		</br>
 		</br>
 		</br>
