--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -12,15 +12,9 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
       <!-- Bootstrap -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<<<<<<< HEAD
-  	 <!-- Lightbox -->
-=======
   	 <!-- Gritter -->
     <script src="js/jquery-1.11.0.min.js"></script>
-<link rel="stylesheet" type="text/css" href="css/jquery.gritter.css" />
-  <script type="text/javascript" src="js/jquery.gritter.js"></script>
     <!-- Lightbox -->
->>>>>>> origin/master
   	<link href="css/lightbox.css" rel="stylesheet" />
     
     {{> tracking_code_script}}
@@ -183,7 +177,7 @@
 
 	<div class="container">
 	<br/><br/><br/>
-  <button type="button" class="btn btn-default pull-right"><a href="#" id="">?</a></button>
+  <button type="button" class="btn btn-default pull-right"><a href="#" class="foodfinderpage" id="add-without-image">?</a></button>
   <br/><br/>
 
 	<div id="mapContainer"></div>
