--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -177,7 +177,24 @@
 
   <div class="container">
   <br/><br/><br/>
-	<button type="button" class="btn btn-default pull-right"><a href="#" id="">?</a></button>
+	<a href="#" class="btn btn-default pull-right foodfinder_help_click" data-toggle="modal" data-target="#basicModal">?</a>
+      
+      <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+                  <h4 class="modal-title" id="myModalLabel">Feed Page</h4>
+                  </div>
+                  <div class="modal-body">
+                      <p>This is where you can post whatever you find interesting about food on campus, whether it is a newfound recipe, a new market item, or a particularly tasty dining hall item</p>
+                  </div>
+                  <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+        </div>
+      </div>
   <br/><br/>
 
   <div id="mapContainer"></div>
