--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -139,7 +139,27 @@
 
 	<div class="container">
         <br/>
-        <button type="button" class="btn btn-default pull-right"><a href="#" class="indexpage" id="add-without-image">?</a></button>
+        <!-- <button type="button" class="btn btn-default pull-right"><a href="#" class="indexpage" id="add-without-image">?</a></button> -->
+
+      <a href="#" class="btn btn-default pull-right feed_help_click" data-toggle="modal" data-target="#basicModal">?</a>
+      
+      <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
+                  <h4 class="modal-title" id="myModalLabel">Feed Page</h4>
+                  </div>
+                  <div class="modal-body">
+                      <p>This is where you can post whatever you find interesting about food on campus, whether it is a newfound recipe, a new market item, or a particularly tasty dining hall item</p>
+                  </div>
+                  <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+        </div>
+      </div>
+
         <button type="button" class="btn btn-default pull-left"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
         <br/><br/>
 		<div class="panel panel-default ">
