--- a/views/profilealternative.handlebars
+++ b/views/profilealternative.handlebars
@@ -148,10 +148,10 @@
               <div class="modal-content">
                   <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-                  <h4 class="modal-title" id="myModalLabel">Feed Page</h4>
+                  <h4 class="modal-title" id="myModalLabel">Profile Page</h4>
                   </div>
                   <div class="modal-body">
-                      <p>This is where you can post whatever you find interesting about food on campus, whether it is a newfound recipe, a new market item, or a particularly tasty dining hall item</p>
+                      <p>Favorited, liked, and posted content can be viewed here for reference. Whether it is a favorite recipe, a post about the latest on campus food trends, you can view them here.</p>
                   </div>
                   <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
