--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -184,10 +184,10 @@
               <div class="modal-content">
                   <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-                  <h4 class="modal-title" id="myModalLabel">Feed Page</h4>
+                  <h4 class="modal-title" id="myModalLabel">Food Finder Page</h4>
                   </div>
                   <div class="modal-body">
-                      <p>This is where you can post whatever you find interesting about food on campus, whether it is a newfound recipe, a new market item, or a particularly tasty dining hall item</p>
+                      <p>Don't know where to head next? Take a look at the map to find the nearest on campus food location. Not sure what is the best thing on the menu? Visit one of the food location subpages to see what others think of today's options.</p>
                   </div>
                   <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
