Fix css issue in food finder alternative

--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -41,6 +41,17 @@
   		text-shadow: 2px 2px 3px #17A57D;
   	}
 
+    .panel-body {
+      padding-left: 0px;
+      padding-right: 0px;
+      padding-top: 3px;
+    }
+    
+    .panel-default {
+      margin-top:5px;
+      margin-bottom:2px;
+    }
+	
 .navbar-default {
   background-color: #87b822;
   border-color: #87b822;
