Add tracking to food finder links and logo

--- a/views/foodfinder.handlebars
+++ b/views/foodfinder.handlebars
@@ -263,7 +263,7 @@
   		</div>
     </a>
     
-    <a href="goodys" class="version_a">
+    <a href="goodys" class="version_a bottom_three">
   		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Goody's Place and Market</h3>
@@ -271,7 +271,7 @@
   		</div>
     </a>
 
-    <a href="ovt" class="version_a">
+    <a href="ovt" class="version_a bottom_three">
   		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>Oceanview Terrace</h3>
@@ -279,7 +279,7 @@
   		</div>
     </a>
 
-    <a href="sixtyfourdegrees" class="version_a">
+    <a href="sixtyfourdegrees" class="version_a bottom_three">
   		<div class="panel panel-default ">
   			<div class="panel-body">
   				<h3>64 Degrees</h3>
