--- a/views/foodfinderalternative.handlebars
+++ b/views/foodfinderalternative.handlebars
@@ -150,7 +150,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
         <div class="navbar-header"> 
-				  <a href="foodfinder" class="navbar-brand">nuTriton </a> 
+				  <a href="foodfinder" class="navbar-brand nutriton_click">nuTriton </a> 
 				  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 				  	<span class="sr-only">Toggle navigation</span>
 				  	<span class="icon-bar"></span>
@@ -246,19 +246,19 @@
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
   			<div class="panel-body">
-  				<h3><a href="goodys" class="version_b">Goody's</a></h3>
+  				<h3><a href="goodys" class="version_b bottom_three">Goody's</a></h3>
   			</div>
   		</div>
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
   			<div class="panel-body">
-  				<h3><a href="ovt" class="version_b">OVT</a></h3>
+  				<h3><a href="ovt" class="version_b bottom_three">OVT</a></h3>
   			</div>
   		</div>
 
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
   			<div class="panel-body">
-  				<h3><a href="sixtyfourdegrees">64 Degrees</a></h3>
+  				<h3><a href="sixtyfourdegrees" class="version_b bottom_three">64 Degrees</a></h3>
   			</div>
   		</div>
 </div>
