--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -121,7 +121,7 @@
 	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header"> 
-				<a href="foodfinder" class="navbar-brand">nuTriton </a> 
+				<a href="foodfinder" class="navbar-brand nutriton_click">nuTriton </a> 
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
