Add tracking to new post button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -139,7 +139,6 @@
 
 	<div class="container">
         <br/>
-        <!-- <button type="button" class="btn btn-default pull-right"><a href="#" class="indexpage" id="add-without-image">?</a></button> -->
 
       <a href="#" class="btn btn-default pull-right feed_help_click" data-toggle="modal" data-target="#basicModal">?</a>
       
@@ -160,7 +159,7 @@
         </div>
       </div>
 
-        <button type="button" class="btn btn-default pull-left"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
+        <button type="button" class="btn btn-default pull-left new_post_click"><a href="#bottom"><span class="glyphicon glyphicon-plus"></span> New Post</a></button>
         <br/><br/>
 		<div class="panel panel-default ">
 			<div class="panel-body">
